force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/breadwinner_qbo__BW_QB_Item__c.object-meta.xml
<CustomObject>
    <label>QuickBooks Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>