force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Active__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>