force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Asset_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Asset_Account_Name__c</fullName>
    <label>Asset Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>