force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>