force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Display_Bundle_Components__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Display_Bundle_Components__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Bundle Components</label>
    <type>Checkbox</type>
</CustomField>