force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Do_Not_Match__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Do_Not_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Match</label>
    <type>Checkbox</type>
</CustomField>