force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Inventory_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Inventory_Start_Date__c</fullName>
    <label>Inventory Start Date</label>
    <type>Date</type>
</CustomField>