force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Parent__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category / Sub Item of</label>
    <referenceTo>breadwinner_qbo__BW_QB_Item__c</referenceTo>
    <relationshipLabel>Sub Items</relationshipLabel>
    <relationshipName>SubItems</relationshipName>
    <type>Lookup</type>
</CustomField>