force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Parent_ID__c</fullName>
    <label>Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>