force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Preferred_Vendor__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Preferred_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Vendor</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>QuickBooks Items</relationshipLabel>
    <relationshipName>QB_Items</relationshipName>
    <type>Lookup</type>
</CustomField>