force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Product_Code_SKU__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Product_Code_SKU__c</fullName>
    <label>Product Code (SKU)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>