force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Purchase_Cost__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Purchase_Cost__c</fullName>
    <label>Purchase Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>