force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Purchase_Description__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Purchase_Description__c</fullName>
    <label>Purchase Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>