force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Purchase_Tax_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Purchase_Tax_Code_ID__c</fullName>
    <label>Purchase Tax Code ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>