force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Purchase_Tax_Included__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Purchase_Tax_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Tax Included</label>
    <type>Checkbox</type>
</CustomField>