force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Quantity_On_Hand__c</fullName>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>