force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Sales_Tax_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Sales_Tax_Code_Name__c</fullName>
    <label>Sales Tax Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>