force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Sub_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Item</label>
    <type>Checkbox</type>
</CustomField>