force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/fields/breadwinner_qbo__Track_Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Track_Quantity_On_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Quantity On Hand</label>
    <type>Checkbox</type>
</CustomField>