force-app/main/default/objects/breadwinner_qbo__BW_QB_Item__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Type__c</columns>
    <columns>breadwinner_qbo__Active__c</columns>
    <columns>breadwinner_qbo__Parent__c</columns>
    <columns>breadwinner_qbo__Product_Code_SKU__c</columns>
    <columns>breadwinner_qbo__Unit_Price__c</columns>
    <columns>breadwinner_qbo__Quantity_On_Hand__c</columns>
    <columns>breadwinner_qbo__Income_Account_Name__c</columns>
    <columns>breadwinner_qbo__Expense_Account_Name__c</columns>
    <columns>breadwinner_qbo__Fully_Qualified_Name__c</columns>
    <columns>breadwinner_qbo__QuickBooks_Org_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>